{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 22,
  "lineage": "147ddb94-91f4-bdb7-5ebf-7c0f916af88c",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "az_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:309081067619:subnet/subnet-01393a98f1c3597f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "available_ip_address_count": 4090,
            "cidr_block": "172.31.32.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01393a98f1c3597f8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "309081067619",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-0caf0f10d02c3d9c4"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "az_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:309081067619:subnet/subnet-0725ed8a4dff1942b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "available_ip_address_count": 4091,
            "cidr_block": "172.31.16.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0725ed8a4dff1942b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "309081067619",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-0caf0f10d02c3d9c4"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "az_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:309081067619:subnet/subnet-06b64f8b3a735462d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "available_ip_address_count": 4087,
            "cidr_block": "172.31.0.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06b64f8b3a735462d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "309081067619",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-0caf0f10d02c3d9c4"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:309081067619:vpc/vpc-0caf0f10d02c3d9c4",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0153386a0788a2f8a",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-056b11c3df77d73a1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0caf0f10d02c3d9c4",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ac0ca9cf68b310ed",
            "owner_id": "309081067619"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:309081067619:listener/app/CrashServerlb/d573ad44be1f0809/642670e3d926d2e9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:309081067619:targetgroup/this/7cdad3e86b7c0116",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:309081067619:listener/app/CrashServerlb/d573ad44be1f0809/642670e3d926d2e9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:309081067619:loadbalancer/app/CrashServerlb/d573ad44be1f0809",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.Crash_Server_lb_s",
            "aws_lb_target_group.this",
            "aws_security_group.lab-alb1",
            "data.aws_subnet.az_1",
            "data.aws_subnet.az_2",
            "data.aws_subnet.az_3",
            "data.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:309081067619:listener/app/CrashServerlb/d573ad44be1f0809/642670e3d926d2e9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:309081067619:targetgroup/this/7cdad3e86b7c0116",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:309081067619:listener/app/CrashServerlb/d573ad44be1f0809/642670e3d926d2e9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:309081067619:loadbalancer/app/CrashServerlb/d573ad44be1f0809",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.Crash_Server_lb_s",
            "aws_lb_target_group.this",
            "aws_security_group.lab-alb1",
            "data.aws_subnet.az_1",
            "data.aws_subnet.az_2",
            "data.aws_subnet.az_3",
            "data.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:309081067619:listener/app/CrashServerlb/d573ad44be1f0809/642670e3d926d2e9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:309081067619:targetgroup/this/7cdad3e86b7c0116",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:309081067619:listener/app/CrashServerlb/d573ad44be1f0809/642670e3d926d2e9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:309081067619:loadbalancer/app/CrashServerlb/d573ad44be1f0809",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.Crash_Server_lb_s",
            "aws_lb_target_group.this",
            "aws_security_group.lab-alb1",
            "data.aws_subnet.az_1",
            "data.aws_subnet.az_2",
            "data.aws_subnet.az_3",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Crash_Server_",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ddf424f81ddb0720",
            "arn": "arn:aws:ec2:us-west-2:309081067619:instance/i-0c07cc79554591140",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c07cc79554591140",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0db81ec1c859cff9d",
            "private_dns": "ip-172-31-3-213.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.3.213",
            "public_dns": "ec2-18-237-24-199.us-west-2.compute.amazonaws.com",
            "public_ip": "18.237.24.199",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-083ece0b70823c3dd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "lab-alb1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06b64f8b3a735462d",
            "tags": {
              "Name": "Crash_Server_-0"
            },
            "tags_all": {
              "Name": "Crash_Server_-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04e2daed1f685e0de"
            ]
          },
          "dependencies": [
            "aws_security_group.lab-alb1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ddf424f81ddb0720",
            "arn": "arn:aws:ec2:us-west-2:309081067619:instance/i-0d27d8cef78fcfd9a",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d27d8cef78fcfd9a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d0b4e11089c4a059",
            "private_dns": "ip-172-31-9-175.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.9.175",
            "public_dns": "ec2-34-217-115-159.us-west-2.compute.amazonaws.com",
            "public_ip": "34.217.115.159",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0697c78ba8a9d3e18",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "lab-alb1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06b64f8b3a735462d",
            "tags": {
              "Name": "Crash_Server_-1"
            },
            "tags_all": {
              "Name": "Crash_Server_-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04e2daed1f685e0de"
            ]
          },
          "dependencies": [
            "aws_security_group.lab-alb1"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ddf424f81ddb0720",
            "arn": "arn:aws:ec2:us-west-2:309081067619:instance/i-0e44b84d0260d7ba4",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e44b84d0260d7ba4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f8b24a3a15e1dacc",
            "private_dns": "ip-172-31-4-155.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.4.155",
            "public_dns": "ec2-54-186-69-210.us-west-2.compute.amazonaws.com",
            "public_ip": "54.186.69.210",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-044a0550f800ec12e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "lab-alb1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06b64f8b3a735462d",
            "tags": {
              "Name": "Crash_Server_-2"
            },
            "tags_all": {
              "Name": "Crash_Server_-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04e2daed1f685e0de"
            ]
          },
          "dependencies": [
            "aws_security_group.lab-alb1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "Crash_Server_lb_s",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:309081067619:loadbalancer/app/CrashServerlb/d573ad44be1f0809",
            "arn_suffix": "app/CrashServerlb/d573ad44be1f0809",
            "desync_mitigation_mode": "defensive",
            "dns_name": "CrashServerlb-305614079.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:309081067619:loadbalancer/app/CrashServerlb/d573ad44be1f0809",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "CrashServerlb",
            "security_groups": [
              "sg-04e2daed1f685e0de"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01393a98f1c3597f8"
              },
              {
                "subnet_id": "subnet-06b64f8b3a735462d"
              },
              {
                "subnet_id": "subnet-0725ed8a4dff1942b"
              }
            ],
            "subnets": [
              "subnet-01393a98f1c3597f8",
              "subnet-06b64f8b3a735462d",
              "subnet-0725ed8a4dff1942b"
            ],
            "tags": {
              "Name": "lab-alb"
            },
            "tags_all": {
              "Name": "lab-alb"
            },
            "vpc_id": "vpc-0caf0f10d02c3d9c4",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_security_group.lab-alb1",
            "data.aws_subnet.az_1",
            "data.aws_subnet.az_2",
            "data.aws_subnet.az_3"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:309081067619:loadbalancer/app/CrashServerlb/d573ad44be1f0809",
            "arn_suffix": "app/CrashServerlb/d573ad44be1f0809",
            "desync_mitigation_mode": "defensive",
            "dns_name": "CrashServerlb-305614079.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:309081067619:loadbalancer/app/CrashServerlb/d573ad44be1f0809",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "CrashServerlb",
            "security_groups": [
              "sg-04e2daed1f685e0de"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01393a98f1c3597f8"
              },
              {
                "subnet_id": "subnet-06b64f8b3a735462d"
              },
              {
                "subnet_id": "subnet-0725ed8a4dff1942b"
              }
            ],
            "subnets": [
              "subnet-01393a98f1c3597f8",
              "subnet-06b64f8b3a735462d",
              "subnet-0725ed8a4dff1942b"
            ],
            "tags": {
              "Name": "lab-alb"
            },
            "tags_all": {
              "Name": "lab-alb"
            },
            "vpc_id": "vpc-0caf0f10d02c3d9c4",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_security_group.lab-alb1",
            "data.aws_subnet.az_1",
            "data.aws_subnet.az_2",
            "data.aws_subnet.az_3"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:309081067619:loadbalancer/app/CrashServerlb/d573ad44be1f0809",
            "arn_suffix": "app/CrashServerlb/d573ad44be1f0809",
            "desync_mitigation_mode": "defensive",
            "dns_name": "CrashServerlb-305614079.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:309081067619:loadbalancer/app/CrashServerlb/d573ad44be1f0809",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "CrashServerlb",
            "security_groups": [
              "sg-04e2daed1f685e0de"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01393a98f1c3597f8"
              },
              {
                "subnet_id": "subnet-06b64f8b3a735462d"
              },
              {
                "subnet_id": "subnet-0725ed8a4dff1942b"
              }
            ],
            "subnets": [
              "subnet-01393a98f1c3597f8",
              "subnet-06b64f8b3a735462d",
              "subnet-0725ed8a4dff1942b"
            ],
            "tags": {
              "Name": "lab-alb"
            },
            "tags_all": {
              "Name": "lab-alb"
            },
            "vpc_id": "vpc-0caf0f10d02c3d9c4",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_security_group.lab-alb1",
            "data.aws_subnet.az_1",
            "data.aws_subnet.az_2",
            "data.aws_subnet.az_3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:309081067619:targetgroup/this/7cdad3e86b7c0116",
            "arn_suffix": "targetgroup/this/7cdad3e86b7c0116",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:309081067619:targetgroup/this/7cdad3e86b7c0116",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "this",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0caf0f10d02c3d9c4"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:309081067619:targetgroup/this/7cdad3e86b7c0116-20220723223317103700000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:309081067619:targetgroup/this/7cdad3e86b7c0116",
            "target_id": "i-0c07cc79554591140"
          },
          "dependencies": [
            "aws_instance.Crash_Server_",
            "aws_lb_target_group.this",
            "aws_security_group.lab-alb1",
            "data.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:309081067619:targetgroup/this/7cdad3e86b7c0116-20220723223317068100000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:309081067619:targetgroup/this/7cdad3e86b7c0116",
            "target_id": "i-0d27d8cef78fcfd9a"
          },
          "dependencies": [
            "aws_instance.Crash_Server_",
            "aws_lb_target_group.this",
            "aws_security_group.lab-alb1",
            "data.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:309081067619:targetgroup/this/7cdad3e86b7c0116-20220723223317140700000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:309081067619:targetgroup/this/7cdad3e86b7c0116",
            "target_id": "i-0e44b84d0260d7ba4"
          },
          "dependencies": [
            "aws_instance.Crash_Server_",
            "aws_lb_target_group.this",
            "aws_security_group.lab-alb1",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lab-alb1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:309081067619:security-group/sg-04e2daed1f685e0de",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "id": "sg-04e2daed1f685e0de",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lab-alb1",
            "name_prefix": "",
            "owner_id": "309081067619",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0caf0f10d02c3d9c4"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}